--- a/data.html
+++ b/data.html
@@ -13,6 +13,13 @@
             <div class="rlink">
                 <a href = "data.html" class = "active"> Data</a>
             </div>
+        </div>
+        
+        <div>
+            <textarea id = "passwordBox"></textarea>
+        </div>
+
+
 
         
 
