--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
         <h3 class = "passwordPlace"> </h3>
 
+        <a href="prezentacja.pptx" download>Pobierz prezentację PowerPoint</a>
+
         <footer>version 0.3</footer>
 
         <script src = "myjs.js"></script>
